--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
        <h2 class="heading">About <span>Me</span></h2> 
 
        <div class="about-img">
-        <img src="/Images/character.jpg" alt="">
+        <img src="Images/character.jpg" alt="">
         <span class="circle-spin"></span>
        </div>
 
