--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>2017 - 2019</div>
                             <h3>Senior Secondary(XII) - S.V.I Inter College</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate similique dolores nam alias adipisci quidem vero, dolorum quis nisi magni.</p>
+                            <p>My Class 12 journey was a transformative experience, marked by academic challenges and personal growth. Navigating through diverse subjects, I discovered a passion for Maths , Physics and Chemistry. The camaraderie among classmates and the guidance of dedicated teachers added depth to my educational voyage.</p>
                         </div>
                     </div>
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>2015 - 2017</div>
                             <h3>Secondary(X) - S.S.K.B.C High School</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate similique dolores nam alias adipisci quidem vero, dolorum quis nisi magni.</p>
+                            <p>Completing class 10 marks the end of an enriching chapter in my academic journey. From conquering challenges to embracing victories, each lesson learned has been a stepping stone towards personal growth. Grateful for the memories, friendships, and knowledge gained, I now eagerly anticipate the next phase with a heart full of ambition and a mind ready for new horizons.</p>
                         </div>
                     </div>
 
@@ -118,14 +118,14 @@
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>Jan 2023 - Mar 2023</div>
                             <h3>UI/UX design - Online</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate similique dolores nam alias adipisci quidem vero, dolorum quis nisi magni.</p>
+                            <p>Having successfully completed my UI/UX designer course online, I navigated through the vast realm of design principles and user experience intricacies on YouTube. This journey not only polished my skills but also instilled a profound understanding of crafting seamless digital experiences. Grateful for the diverse insights gained, I'm now equipped and enthusiastic to embark on creative endeavors in the dynamic world of UI/UX design.</p>
                         </div>
                     </div>
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>Dec 2022 - Present</div>
                             <h3>Figma Design - Online</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate similique dolores nam alias adipisci quidem vero, dolorum quis nisi magni.</p>
+                            <p>Recently wrapped up an online Figma design course, mastering the art of creating both simple and attractive digital interfaces. From wireframes to polished designs, the journey was a blend of creativity and precision. Excited to apply these skills and bring engaging designs to life.</p>
                         </div>
                     </div>
                     <div class="education-content">
@@ -149,8 +149,10 @@
         
         <div class="myworks-container">
             <div class="myworks-box">
-                <img src="Images/w1 natclan redesign.png" alt="">
                 <div class="myworks-layer">
+                    <div class="myworks-img">
+                        <img src="Images/netclan.png" alt="">
+                    </div>
                     <h4>Netclan App</h4>
                     <p>I'm very excited to share my new app Netclan in a few days of hard work, creativity and dedication.</p>
                     <a href="https://www.behance.net/gallery/178076509/Netclan-app-Redesign" target="_blank"><i class='bx bx-link-external'></i></a>
@@ -158,8 +160,10 @@
             </div>
 
             <div class="myworks-box">
-                <img src="Images/w2 leaderboard football 2.png" alt="">
                 <div class="myworks-layer">
+                    <div class="myworks-img">
+                        <img src="Images/football.png" alt="">
+                    </div>
                     <h4>Football Web</h4>
                     <p>I'm very excited to share leaderboard for football news and scoring website.</p>
                     <a href="https://www.behance.net/gallery/178379661/leaderboard-screen-of-a-football-news-and-scoring-web" target="_blank"><i class='bx bx-link-external'></i></a>
@@ -167,8 +171,10 @@
             </div>
 
             <div class="myworks-box">
-                <img src="Images/w3 celebrare 2.png" alt="">
                 <div class="myworks-layer">
+                    <div class="myworks-img">
+                        <img src="Images/invitation.png" alt="">
+                    </div>
                     <h4>Invitation Web</h4>
                     <p>Welcome to our unique design website, where your events Invitation is more than just a piece of imformation.</p>
                     <a href="https://www.behance.net/gallery/178687197/Video-invitation-website-design" target="_blank"><i class='bx bx-link-external'></i></a>
@@ -176,8 +182,10 @@
             </div>
 
             <div class="myworks-box">
-                <img src="Images/w4 food app.png" alt="">
                 <div class="myworks-layer">
+                    <div class="myworks-img">
+                        <img src="Images/food.png" alt="">
+                    </div>
                     <h4>Food App</h4>
                     <p></p>
                     <a href="https://www.behance.net/gallery/163127565/Food-app-design" target="_blank"><i class='bx bx-link-external'></i></a>
@@ -185,8 +193,10 @@
             </div>
 
             <div class="myworks-box">
-                <img src="Images/w5 atg hotel (1).png" alt="">
                 <div class="myworks-layer">
+                    <div class="myworks-img">
+                        <img src="Images/hotel.png" alt="">
+                    </div>
                     <h4>Hotel Web</h4>
                     <p></p>
                     <a href="https://www.behance.net/gallery/183777783/Hotel-booking-web" target="_blank"><i class='bx bx-link-external'></i></a>
@@ -194,8 +204,10 @@
             </div>
 
             <div class="myworks-box">
-                <img src="Images/w6 trevling 2 (1).png" alt="">
                 <div class="myworks-layer">
+                    <div class="myworks-img">
+                        <img src="Images/travel.png" alt="">
+                    </div>
                     <h4>Travel App</h4>
                     <p>Travel opens up a world of beauty, revealing stnning landscapes, captivating cultures, and breathtaking experiences.</p>
                     <a href="https://www.behance.net/gallery/169513253/Travel-tale-lets-travel-the-world" target="_blank"><i class='bx bx-link-external'></i></a>
