--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="home-sci">
-            <a href="#"><i class='bx bxl-instagram'></i></a>
+            <a href="https://instagram.com/visionaryinsan?igshid=M2RkZGJiMzhjOQ=="><i class='bx bxl-instagram'></i></a>
             <a href="https://www.behance.net/subhamsaw" target="_blank"><i class='bx bxl-behance' ></i></a>
             <a href="https://www.linkedin.com/in/subham-saw-7913b5246" target="_blank"><i class='bx bxl-linkedin' ></i></a>
         </div>
@@ -187,7 +187,7 @@
                         <img src="Images/food.png" alt="">
                     </div>
                     <h4>Food App</h4>
-                    <p></p>
+                    <p>I'm very excited to share food app, got food to your doorstep in just one click.</p>
                     <a href="https://www.behance.net/gallery/163127565/Food-app-design" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -198,7 +198,7 @@
                         <img src="Images/hotel.png" alt="">
                     </div>
                     <h4>Hotel Web</h4>
-                    <p></p>
+                    <p>I'm very excited to share The Hotel Web. The great advantage of a hotel is that it is a refuge from home life.</p>
                     <a href="https://www.behance.net/gallery/183777783/Hotel-booking-web" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
