--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="myworks-box">
                 <div class="myworks-layer">
                     <div class="myworks-img">
-                        <img src="Images/netclan.png" alt="">
+                        <img src="Images/food.png" alt="">
                     </div>
                     <h4>E-Commerse Website</h4>
                     <p></p>
@@ -162,7 +162,7 @@
             <div class="myworks-box">
                 <div class="myworks-layer">
                     <div class="myworks-img">
-                        <img src="Images/football.png" alt="">
+                        <img src="Images/digitalagency.png" alt="">
                     </div>
                     <h4>Digital Agency Website</h4>
                     <p></p>
@@ -184,7 +184,7 @@
             <div class="myworks-box">
                 <div class="myworks-layer">
                     <div class="myworks-img">
-                        <img src="Images/food.png" alt="">
+                        <img src="Images/5539745.png" alt="">
                     </div>
                     <h4>Chat Talk Website</h4>
                     <p></p>
@@ -195,7 +195,7 @@
             <div class="myworks-box">
                 <div class="myworks-layer">
                     <div class="myworks-img">
-                        <img src="Images/hotel.png" alt="">
+                        <img src="Images/barber.png" alt="">
                     </div>
                     <h4>Barber Shop online Booking App</h4>
                     <p></p>
